<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:weightSum="100"
    android:background="@color/app_bg"
    android:gravity="center"
    tools:context=".fragments.SetupScreenFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:weightSum="100"
        >
    <TextView
        android:id="@+id/questionListScreenName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="70"
        android:layout_margin="5dp"
        android:text="@string/questions_list_text"
        android:textSize="30sp"
        android:textColor="@color/app_element_bg"
        android:textStyle="bold"
        />

        <TextView
            android:id="@+id/timerTextview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:layout_margin="5dp"
            android:text="@string/default_time_00_00"
            android:textSize="30sp"
            android:textColor="@color/app_element_bg"
            android:textStyle="bold"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/questionListRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="90"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/button_background"
        app:backgroundTint="@null"
        android:text="@string/submit_button_text_list_fragment"
        />





</LinearLayout>