<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".fragments.SetupScreenFragment">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/application_name"
        android:textColor="@color/app_element_bg"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/appIntroduction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/app_introduction"
        android:textColor="@color/app_element_bg"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.534"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/bulbanimation" />

        <Button
            android:id="@+id/startQuizButton"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/start_quiz_button_text"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:icon="@drawable/ic_baseline_start_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/animationView"
            app:layout_constraintVertical_bias="0.519" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rulesRecyclerView"
            style="@style/scrollbar_style"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:scrollbars="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.057" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>